versioned_docs/version-1.16.1/exercise-1-llm-configuration.mdx
---
sidebar_position: 3
---

# 🧙 Exercise 1: Connect to Your Magical LLM

<div style={{ background: '#f0f9ff', border: '2px solid #0ea5e9', borderRadius: '12px', padding: '2em', marginBottom: '2em' }}>
  <h2 style={{ margin: '0 0 1em 0', color: '#0c4a6e', fontSize: '1.5em' }}>🎯 Exercise Overview</h2>
  <p style={{ fontSize: '1.1em', marginBottom: '1em', lineHeight: '1.6' }}>
    Welcome to your first spell in the <b>Testus Patronus</b> journey! In this exercise, you'll connect your Dify instance to a powerful Azure-hosted Large Language Model (LLM), which will become the <i>core</i> of your AI assistant.
  </p>
      <p style={{ margin: '0', fontSize: '1em', fontWeight: '600', color: '#7c3aed' }}>
      ✨ <b>This is the foundation of your Retrieval-Augmented Generation (RAG) assistant. Without a working LLM, the magic won't flow.</b>
    </p>
</div>

<div style={{ background: '#ecfdf5', border: '2px solid #22c55e', borderRadius: '8px', padding: '1em 1.5em', marginBottom: '2em' }}>
  <b>Release baseline:</b> This exercise targets the August 2026 workshop default, Dify <code>1.16.1</code>. The dated compatibility choices in the header may use slightly different labels or layouts, but the model-provider goal is the same.
</div>

<div style={{ background: '#fffbe8', border: '2px solid #facc15', borderRadius: '8px', padding: '1em 1.5em', marginBottom: '2em' }}>
  <b>Verified 1.16.1 path:</b> install Azure OpenAI Service <code>0.0.69</code> from <b>Integrations</b>, configure <code>gpt-35-turbo-16k</code> and <code>text-embedding-3-large</code>, then select them under <b>System Model Settings</b>. The screenshots below were captured from a successful disposable-instance run with secrets hidden.
</div>

<div style={{ display: 'grid', gridTemplateColumns: '2fr 1fr', gap: '2em', alignItems: 'center', marginBottom: '2em' }}>
  <div>
    <h3 style={{ color: '#0c4a6e', marginBottom: '1em' }}>🚀 What You'll Build</h3>
    <ul style={{ fontSize: '1em', lineHeight: '1.6' }}>
      <li><b>Connect</b> to Azure-hosted GPT models</li>
      <li><b>Configure</b> both LLM and embedding models</li>
      <li><b>Create</b> your first AI chatbot</li>
      <li><b>Test</b> the complete workflow</li>
    </ul>
  </div>
  <div style={{ textAlign: 'center' }}>
    <img src={require('../static/img/generation.png').default} alt="AI Generation Process" style={{ maxWidth: '100%', borderRadius: '8px' }} />
  </div>
</div>

---

## 📋 Step-by-Step Checklist

<div style={{ background: '#f3f0ff', border: '2px solid #7c3aed', borderRadius: '12px', padding: '1.5em', marginBottom: '2em' }}>
  <h3 style={{ margin: '0 0 1em 0', color: '#7c3aed', fontSize: '1.2em' }}>🎯 Exercise Checklist</h3>
  <div style={{ display: 'grid', gridTemplateColumns: '1fr 1fr', gap: '1em', fontSize: '1em' }}>
    <div>
      <ul style={{ listStyle: 'none', padding: 0, margin: 0 }}>
        <li style={{ marginBottom: '0.5em' }}><label style={{ display: 'flex', alignItems: 'center', cursor: 'pointer' }}><input type="checkbox" style={{ marginRight: '0.5em' }} /> <b>Step 1:</b> Launch Dify instance</label></li>
        <li style={{ marginBottom: '0.5em' }}><label style={{ display: 'flex', alignItems: 'center', cursor: 'pointer' }}><input type="checkbox" style={{ marginRight: '0.5em' }} /> <b>Step 2:</b> Set up admin account</label></li>
        <li style={{ marginBottom: '0.5em' }}><label style={{ display: 'flex', alignItems: 'center', cursor: 'pointer' }}><input type="checkbox" style={{ marginRight: '0.5em' }} /> <b>Step 3:</b> Explore Dify interface</label></li>
      </ul>
    </div>
    <div>
  <ul style={{ listStyle: 'none', padding: 0, margin: 0 }}>
        <li style={{ marginBottom: '0.5em' }}><label style={{ display: 'flex', alignItems: 'center', cursor: 'pointer' }}><input type="checkbox" style={{ marginRight: '0.5em' }} /> <b>Step 4:</b> Configure LLM models</label></li>
        <li style={{ marginBottom: '0.5em' }}><label style={{ display: 'flex', alignItems: 'center', cursor: 'pointer' }}><input type="checkbox" style={{ marginRight: '0.5em' }} /> <b>Step 5:</b> Create first chatbot</label></li>
        <li style={{ marginBottom: '0.5em' }}><label style={{ display: 'flex', alignItems: 'center', cursor: 'pointer' }}><input type="checkbox" style={{ marginRight: '0.5em' }} /> <b>Step 6:</b> Test your assistant</label></li>
  </ul>
    </div>
  </div>
  <div style={{ background: '#e0f2fe', border: '1px solid #38bdf8', borderRadius: '6px', padding: '0.8em', marginTop: '1em', fontSize: '0.9em' }}>
    <b>⏱️ Estimated Time:</b> 15-20 minutes | <b>🎯 Goal:</b> Working AI chatbot with Azure LLM
  </div>
</div>

---

## 🛠️ Step 1: Launch Your Dify Instance

<div style={{ background: '#fffbe8', border: '2px solid #facc15', borderRadius: '12px', padding: '1.5em', marginBottom: '2em' }}>
  <h3 style={{ margin: '0 0 1em 0', color: '#ca8a04', fontSize: '1.2em' }}>🚀 Launch Your Instance</h3>
  <p style={{ margin: '0 0 1em 0', fontSize: '1em' }}>Click the magic URL to summon your resources:</p>
  <div style={{ textAlign: 'center', margin: '1em 0' }}>
    <a href="https://testus-patronus.testingfantasy.com/" target="_blank" rel="noopener noreferrer" style={{ 
      display: 'inline-block', 
      background: '#facc15', 
      color: '#000', 
      padding: '0.8em 1.5em', 
      borderRadius: '8px', 
      textDecoration: 'none', 
      fontWeight: 'bold',
      fontSize: '1.1em',
      boxShadow: '0 2px 4px rgba(0,0,0,0.1)'
    }}>🚀 Launch Your Dify Instance</a>
  </div>
</div>

### 📋 What You'll See

You'll be redirected to a personalized portal with your credentials:

<div style={{ textAlign: 'center', margin: '1em 0' }}>
  <img src={require('../static/img/ex1/dify-instance-credentials.png').default} alt="Dify Instance Portal" style={{ maxWidth: '100%', borderRadius: '8px', cursor: 'pointer' }} onClick={(e) => {
    const img = e.target;
    if (img.style.position === 'fixed') {
      img.style.position = 'static';
      img.style.top = 'auto';
      img.style.left = 'auto';
      img.style.transform = 'none';
      img.style.zIndex = 'auto';
      img.style.maxWidth = '100%';
      img.style.maxHeight = 'none';
      document.body.style.overflow = 'auto';
    } else {
      img.style.position = 'fixed';
      img.style.top = '50%';
      img.style.left = '50%';
      img.style.transform = 'translate(-50%, -50%)';
      img.style.zIndex = '9999';
      img.style.maxWidth = '90vw';
      img.style.maxHeight = '90vh';
      img.style.objectFit = 'contain';
      document.body.style.overflow = 'hidden';
    }
  }} />
  <div style={{ fontSize: '0.95em', color: '#666', marginTop: '0.5em' }}><i>Your personalized Dify instance portal with credentials (click to expand)</i></div>
</div>

<div style={{ background: '#f0f9ff', border: '2px solid #0ea5e9', borderRadius: '8px', padding: '1em 1.5em', margin: '1em 0' }}>
  <h4 style={{ margin: '0 0 0.5em 0', color: '#0c4a6e' }}>📋 This Page Contains:</h4>
  <ul style={{ margin: '0', fontSize: '0.95em' }}>
    <li><b>Dify Instance URL</b> - Your personal Dify dashboard</li>
    <li><b>Azure LLM Credentials</b> - For both GPT-3.5 and Embeddings</li>
    <li><b>Session Reminder</b> - Instance is ephemeral (save your work!)</li>
</ul>
</div>

<div style={{ background: '#e0f2fe', border: '2px solid #38bdf8', borderRadius: '8px', padding: '1em 1.2em', margin: '1em 0' }}>
  <p style={{ margin: '0', fontSize: '1em' }}>
    🧠 <b>Pro Tip:</b> Keep this tab open during the session for easy copy/paste access to your credentials.
  </p>
</div>

---

## 🛡️ Step 2: Dify Admin Account Setup

<div style={{ background: '#f0f9ff', border: '2px solid #0ea5e9', borderRadius: '8px', padding: '1em 1.5em', margin: '1em 0' }}>
  <h4 style={{ margin: '0 0 0.5em 0', color: '#0c4a6e' }}>📋 Setup Process Overview</h4>
  <p style={{ margin: '0', fontSize: '0.95em' }}>You'll need to create an admin account using the provided credentials. Follow these 3 steps:</p>
</div>

### 🔑 Step 2.1: Copy Your Admin Credentials

<div style={{ textAlign: 'center', margin: '1em 0' }}>
  <img 
    src={require('../static/img/ex1/dify-admin-credentials.png').default} 
    alt="Copy Admin Credentials" 
    style={{ maxWidth: '100%', borderRadius: '8px', cursor: 'pointer' }} 
    onClick={(e) => {
      const img = e.target;
      if (img.style.position === 'fixed') {
        img.style.position = 'static';
        img.style.top = 'auto';
        img.style.left = 'auto';
        img.style.transform = 'none';
        img.style.zIndex = 'auto';
        img.style.maxWidth = '100%';
        img.style.maxHeight = 'none';
        document.body.style.overflow = 'auto';
      } else {
        img.style.position = 'fixed';
        img.style.top = '50%';
        img.style.left = '50%';
        img.style.transform = 'translate(-50%, -50%)';
        img.style.zIndex = '9999';
        img.style.maxWidth = '90vw';
        img.style.maxHeight = '90vh';
        img.style.objectFit = 'contain';
        document.body.style.overflow = 'hidden';
      }
    }}
  />
  <div style={{ fontSize: '0.9em', color: '#666', marginTop: '0.5em' }}><i>📋 Step 1: Copy your admin credentials (click to expand)</i></div>
</div>

### 🌐 Step 2.2: Navigate to Your Dify Instance

<div style={{ background: '#fffbe8', border: '2px solid #facc15', borderRadius: '8px', padding: '1em 1.5em', margin: '1em 0' }}>
  <b>Next:</b> Use the Dify instance URL from your credentials to navigate to your personalized Dify dashboard.
</div>

<div style={{ textAlign: 'center', margin: '1em 0' }}>
  <img 
    src={require('../static/img/ex1/dify_instance_navigate.png').default} 
    alt="Dify Instance Navigate" 
    style={{ maxWidth: '100%', borderRadius: '8px', cursor: 'pointer' }} 
    onClick={(e) => {
      const img = e.target;
      if (img.style.position === 'fixed') {
        img.style.position = 'static';
        img.style.top = 'auto';
        img.style.left = 'auto';
        img.style.transform = 'none';
        img.style.zIndex = 'auto';
        img.style.maxWidth = '100%';
        img.style.maxHeight = 'none';
        document.body.style.overflow = 'auto';
      } else {
        img.style.position = 'fixed';
        img.style.top = '50%';
        img.style.left = '50%';
        img.style.transform = 'translate(-50%, -50%)';
        img.style.zIndex = '9999';
        img.style.maxWidth = '90vw';
        img.style.maxHeight = '90vh';
        img.style.objectFit = 'contain';
        document.body.style.overflow = 'hidden';
      }
    }}
  />
  <div style={{ fontSize: '0.9em', color: '#666', marginTop: '0.5em' }}><i>🌐 Step 2: Navigate to your Dify Instance (click to expand)</i></div>
</div>

### 👤 Step 2.3: Create Your Admin Account

<div style={{ textAlign: 'center', margin: '1em 0' }}>
  <img 
    src={require('../static/img/ex1/dify-admin-setup.png').default} 
    alt="Dify Admin Setup" 
    style={{ maxWidth: '100%', borderRadius: '8px', cursor: 'pointer' }} 
    onClick={(e) => {
      const img = e.target;
      if (img.style.position === 'fixed') {
        img.style.position = 'static';
        img.style.top = 'auto';
        img.style.left = 'auto';
        img.style.transform = 'none';
        img.style.zIndex = 'auto';
        img.style.maxWidth = '100%';
        img.style.maxHeight = 'none';
        document.body.style.overflow = 'auto';
      } else {
        img.style.position = 'fixed';
        img.style.top = '50%';
        img.style.left = '50%';
        img.style.transform = 'translate(-50%, -50%)';
        img.style.zIndex = '9999';
        img.style.maxWidth = '90vw';
        img.style.maxHeight = '90vh';
        img.style.objectFit = 'contain';
        document.body.style.overflow = 'hidden';
      }
    }}
  />
  <div style={{ fontSize: '0.9em', color: '#666', marginTop: '0.5em' }}><i>👤 Step 3: Create your admin account (click to expand)</i></div>
</div>

<div style={{ background: '#e0f2fe', border: '2px solid #38bdf8', borderRadius: '8px', padding: '0.8em 1.2em', margin: '1em 0' }}>
  🧠 <b>Pro Tip:</b> Use the provided credentials for your admin account - it's easier to remember and you'll have them handy for the session.
  <br /><b>💡 Keep this tab open during the session for easy copy/paste access.</b>
</div>




---

## 🧪 Step 3: Log in to Dify

Once the Admin Account is created, you will be logged in directly to the Dify dashboard.

### 🗂️ Explore Dify's Main Sections

<div style={{ textAlign: 'center', margin: '2em 0' }}>
  <img 
    src={require('../static/img/ex1/dify-landing-page.png').default} 
    alt="Dify Landing Page" 
    style={{ maxWidth: '100%', borderRadius: '8px', cursor: 'pointer' }} 
    onClick={(e) => {
      const img = e.target;
      if (img.style.position === 'fixed') {
        img.style.position = 'static';
        img.style.top = 'auto';
        img.style.left = 'auto';
        img.style.transform = 'none';
        img.style.zIndex = 'auto';
        img.style.maxWidth = '100%';
        img.style.maxHeight = 'none';
        document.body.style.overflow = 'auto';
      } else {
        img.style.position = 'fixed';
        img.style.top = '50%';
        img.style.left = '50%';
        img.style.transform = 'translate(-50%, -50%)';
        img.style.zIndex = '9999';
        img.style.maxWidth = '90vw';
        img.style.maxHeight = '90vh';
        img.style.objectFit = 'contain';
        document.body.style.overflow = 'hidden';
      }
    }}
  />
  <div style={{ fontSize: '0.95em', color: '#666', marginTop: '0.5em' }}><i>Screenshot: Dify's main dashboard (click to expand)</i></div>
</div>

<div style={{ background: '#f3f0ff', border: '2px solid #7c3aed', borderRadius: '8px', padding: '1em 1.5em', margin: '1em 0' }}>
  <h4 style={{ margin: '0 0 0.5em 0', color: '#7c3aed' }}>🎯 Main Sections Overview</h4>
  <div style={{ display: 'grid', gridTemplateColumns: '1fr 1fr', gap: '1em', fontSize: '0.9em' }}>
  <div>
      <p><b>🎨 Studio:</b> Design and manage your chatbots using visual blocks and workflows.</p>
      <p><b>📚 Knowledge:</b> Upload documents your assistant can reference—perfect for product specs, requirements, and test cases.</p>
  </div>
  <div>
      <p><b>🔧 Tools:</b> Access extra plugins, service integrations, and advanced settings.</p>
      <p><b>⚙️ Settings:</b> Manage model providers, keys, and other configuration options.</p>
    </div>
  </div>
</div>

### 🎯 Next: Navigate to Settings

<div style={{ background: '#fffbe8', border: '2px solid #facc15', borderRadius: '8px', padding: '1em 1.5em', margin: '1em 0' }}>
  <b>Follow these steps to configure your LLM:</b>
  <ol style={{ margin: '0.5em 0', paddingLeft: '1.5em' }}>
    <li><b>Click on your user icon</b> (top-right corner with your profile picture)</li>
    <li><b>Select "Settings"</b> from the dropdown menu</li>
    <li><b>Navigate to "Model Provider"</b> tab</li>
  </ol>
</div>

<div style={{ textAlign: 'center', margin: '1em 0' }}>
  <img 
    src={require('../static/img/ex1/dify-account-menu.png').default} 
    alt="Dify Account Menu" 
    style={{ maxWidth: '100%', borderRadius: '8px', cursor: 'pointer' }} 
    onClick={(e) => {
      const img = e.target;
      if (img.style.position === 'fixed') {
        img.style.position = 'static';
        img.style.top = 'auto';
        img.style.left = 'auto';
        img.style.transform = 'none';
        img.style.zIndex = 'auto';
        img.style.maxWidth = '100%';
        img.style.maxHeight = 'none';
        document.body.style.overflow = 'auto';
      } else {
        img.style.position = 'fixed';
        img.style.top = '50%';
        img.style.left = '50%';
        img.style.transform = 'translate(-50%, -50%)';
        img.style.zIndex = '9999';
        img.style.maxWidth = '90vw';
        img.style.maxHeight = '90vh';
        img.style.objectFit = 'contain';
        document.body.style.overflow = 'hidden';
      }
    }}
  />
  <div style={{ fontSize: '0.95em', color: '#666', marginTop: '0.5em' }}><i>Step 1: Click on your user icon → Settings (click to expand)</i></div>
</div>

<div style={{ textAlign: 'center', margin: '1em 0' }}>
  <img 
    src={require('../static/img/ex1/dify-settings.png').default} 
    alt="Dify Settings" 
    style={{ maxWidth: '100%', borderRadius: '8px', cursor: 'pointer' }} 
    onClick={(e) => {
      const img = e.target;
      if (img.style.position === 'fixed') {
        img.style.position = 'static';
        img.style.top = 'auto';
        img.style.left = 'auto';
        img.style.transform = 'none';
        img.style.zIndex = 'auto';
        img.style.maxWidth = '100%';
        img.style.maxHeight = 'none';
        document.body.style.overflow = 'auto';
      } else {
        img.style.position = 'fixed';
        img.style.top = '50%';
        img.style.left = '50%';
        img.style.transform = 'translate(-50%, -50%)';
        img.style.zIndex = '9999';
        img.style.maxWidth = '90vw';
        img.style.maxHeight = '90vh';
        img.style.objectFit = 'contain';
        document.body.style.overflow = 'hidden';
      }
    }}
  />
  <div style={{ fontSize: '0.95em', color: '#666', marginTop: '0.5em' }}><i>Step 2: Dify Settings page - navigate to "Model Provider" tab (click to expand)</i></div>
</div>

---

## 🔗 Step 4: Configure the Azure GPT LLM

Now let's wire your Dify to use Azure-hosted GPT models.

### 🧭 Model Selection Guide (Before You Configure)

Use this quick framework to choose the right model for each task in this workshop.

<div style={{ background: '#fff7ed', border: '2px solid #fb923c', borderRadius: '8px', padding: '1em 1.5em', margin: '1em 0' }}>
  <b>External benchmark reference:</b> Use <a href="https://artificialanalysis.ai/" target="_blank" rel="noopener noreferrer">Artificial Analysis</a> to compare quality, latency, and relative cost before selecting a provider/model.
</div>

<table style={{ width: '100%', borderCollapse: 'collapse', marginBottom: '1em' }}>
  <thead>
    <tr style={{ background: '#f3f4f6' }}>
      <th style={{ padding: '0.6em', border: '1px solid #e5e7eb', textAlign: 'left' }}>Task</th>
      <th style={{ padding: '0.6em', border: '1px solid #e5e7eb', textAlign: 'left' }}>Recommended model profile</th>
      <th style={{ padding: '0.6em', border: '1px solid #e5e7eb', textAlign: 'left' }}>Why</th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td style={{ border: '1px solid #e5e7eb', padding: '0.6em' }}>Requirement Q&amp;A in chatbot</td>
      <td style={{ border: '1px solid #e5e7eb', padding: '0.6em' }}>Balanced chat model (good quality/cost)</td>
      <td style={{ border: '1px solid #e5e7eb', padding: '0.6em' }}>You need consistent answers with moderate latency.</td>
    </tr>
    <tr>
      <td style={{ border: '1px solid #e5e7eb', padding: '0.6em' }}>Knowledge retrieval embeddings</td>
      <td style={{ border: '1px solid #e5e7eb', padding: '0.6em' }}>High-quality embedding model</td>
      <td style={{ border: '1px solid #e5e7eb', padding: '0.6em' }}>Embedding quality strongly impacts retrieval relevance.</td>
    </tr>
    <tr>
      <td style={{ border: '1px solid #e5e7eb', padding: '0.6em' }}>High-volume test experimentation</td>
      <td style={{ border: '1px solid #e5e7eb', padding: '0.6em' }}>Lower-cost/faster model</td>
      <td style={{ border: '1px solid #e5e7eb', padding: '0.6em' }}>Faster feedback loops while iterating prompts and flows.</td>
    </tr>
    <tr>
      <td style={{ border: '1px solid #e5e7eb', padding: '0.6em' }}>Sensitive/private workloads</td>
      <td style={{ border: '1px solid #e5e7eb', padding: '0.6em' }}>Local or self-hosted model</td>
      <td style={{ border: '1px solid #e5e7eb', padding: '0.6em' }}>Helps meet data residency and control constraints.</td>
    </tr>
  </tbody>
</table>

### ⚙️ Core Model Parameters You Should Tune

<ul>
  <li><b>Temperature</b>: start at <code>0.2-0.4</code> for deterministic testing tasks; increase for creative generation.</li>
  <li><b>Top P</b>: keep at <code>0.8-1.0</code>; avoid changing both Top P and Temperature aggressively at the same time.</li>
  <li><b>Max Tokens</b>: cap output to control cost and reduce noisy long answers.</li>
  <li><b>Frequency/Presence Penalties</b>: use low values first; they can reduce repetition but also remove needed terminology.</li>
  <li><b>Context Window</b>: ensure your model can handle prompt + retrieved chunks + expected answer length.</li>
  <li><b>Timeout/Retry</b>: set explicit limits so workflow runs fail fast and are easier to debug.</li>
</ul>

<div style={{ background: '#ecfeff', border: '2px solid #06b6d4', borderRadius: '8px', padding: '1em 1.5em', margin: '1em 0' }}>
  <b>Recommended baseline for this workshop:</b> Temperature <code>0.3</code>, Top P <code>0.9</code>, and a moderate max token cap. Change one parameter at a time and re-run the same validation questions.
</div>

### 1. Install Model Provider

<ol>
  <li>
    Navigate to <b>Settings → Model Provider</b>
    <div style={{ background: '#f0f9ff', border: '2px solid #0ea5e9', borderRadius: '8px', padding: '1em 1.5em', margin: '1em 0' }}>
      <b>Important:</b> Select the <b>Azure OpenAI Service</b> provider.
    </div>
    <img src={require('../static/img/dify/1.16.1/ex1/dify-settings-model-provider.png').default} alt="Dify 1.16.1 model provider settings" style={{ maxWidth: '100%', borderRadius: '8px', margin: '1em 0' }} />
    <div style={{ fontSize: '0.95em', color: '#666', marginBottom: '1em' }}><i>Screenshot: Model provider settings page</i></div>
  </li>
  <li>
    Install <b>Azure OpenAI Service</b>
    <img src={require('../static/img/dify/1.16.1/ex1/dify-install-azure-openai.png').default} alt="Install Azure OpenAI Service 0.0.69" style={{ maxWidth: '100%', borderRadius: '8px', margin: '1em 0' }} />
    <div style={{ fontSize: '0.95em', color: '#666', marginBottom: '1em' }}><i>Screenshot: Installing Azure OpenAI service</i></div>
  </li>
</ol>

### 2. Add a GPT-3.5 LLM
Use the credentials provided earlier to configure the model:


<div style={{ background: '#f0f9ff', border: '2px solid #0ea5e9', borderRadius: '8px', padding: '1em 1.5em', margin: '1em 0' }}>
  <h4 style={{ margin: '0 0 0.5em 0', color: '#0c4a6e' }}>🔧 Configuration Steps</h4>
  <p style={{ margin: '0', fontSize: '0.95em' }}>Add models to your Azure OpenAI Service and configure using the provided credentials.</p>
</div>

<div style={{ display: 'grid', gridTemplateColumns: '1fr 1fr', gap: '2em', alignItems: 'start', margin: '1em 0' }}>
  <div>
    <h4 style={{ margin: '0 0 1em 0', color: '#7c3aed' }}>📸 Add Model Interface</h4>
    <div style={{ textAlign: 'center' }}>
      <img 
        src={require('../static/img/dify/1.16.1/ex1/dify-add-llm-model.png').default} 
        alt="Add Model" 
        style={{ maxWidth: '100%', borderRadius: '8px', cursor: 'pointer' }} 
        onClick={(e) => {
          const img = e.target;
          if (img.style.position === 'fixed') {
            img.style.position = 'static';
            img.style.top = 'auto';
            img.style.left = 'auto';
            img.style.transform = 'none';
            img.style.zIndex = 'auto';
            img.style.maxWidth = '100%';
            img.style.maxHeight = 'none';
            document.body.style.overflow = 'auto';
          } else {
            img.style.position = 'fixed';
            img.style.top = '50%';
            img.style.left = '50%';
            img.style.transform = 'translate(-50%, -50%)';
            img.style.zIndex = '9999';
            img.style.maxWidth = '90vw';
            img.style.maxHeight = '90vh';
            img.style.objectFit = 'contain';
            document.body.style.overflow = 'hidden';
          }
        }}
      />
      <div style={{ fontSize: '0.9em', color: '#666', marginTop: '0.5em' }}><i>Add models to your Azure OpenAI Service (click to expand)</i></div>
    </div>
  </div>
  
  <div>
    <h4 style={{ margin: '0 0 1em 0', color: '#7c3aed' }}>📋 Configuration Values</h4>
    <p style={{ fontSize: '0.9em', marginBottom: '1em', color: '#666' }}>Use the credentials provided earlier to configure the model:</p>
    
    <table style={{ width: '100%', borderCollapse: 'collapse', fontSize: '0.9em' }}>
  <thead>
    <tr style={{ background: '#f3f0ff' }}>
          <th style={{ padding: '0.5em', border: '1px solid #e5e7eb', textAlign: 'left' }}>Field</th>
          <th style={{ padding: '0.5em', border: '1px solid #e5e7eb', textAlign: 'left' }}>Value</th>
    </tr>
  </thead>
  <tbody>
        <tr><td style={{ border: '1px solid #e5e7eb', padding: '0.5em' }}>Provider</td><td style={{ border: '1px solid #e5e7eb', padding: '0.5em' }}>Azure OpenAI</td></tr>
        <tr><td style={{ border: '1px solid #e5e7eb', padding: '0.5em' }}>Model Name</td><td style={{ border: '1px solid #e5e7eb', padding: '0.5em' }}><code>gpt-35-turbo-16k</code></td></tr>
        <tr><td style={{ border: '1px solid #e5e7eb', padding: '0.5em' }}>Endpoint</td><td style={{ border: '1px solid #e5e7eb', padding: '0.5em' }}><i>(paste endpoint URL)</i></td></tr>
        <tr><td style={{ border: '1px solid #e5e7eb', padding: '0.5em' }}>API Key</td><td style={{ border: '1px solid #e5e7eb', padding: '0.5em' }}><i>(paste your key)</i></td></tr>
        <tr><td style={{ border: '1px solid #e5e7eb', padding: '0.5em' }}>API Version</td><td style={{ border: '1px solid #e5e7eb', padding: '0.5em' }}><code>2024-12-01-preview</code></td></tr>
  </tbody>
</table>
  </div>
</div>

### 3. Add Embedding Model



<div style={{ background: '#f0f9ff', border: '2px solid #0ea5e9', borderRadius: '8px', padding: '1em 1.5em', margin: '1em 0' }}>
  <h4 style={{ margin: '0 0 0.5em 0', color: '#0c4a6e' }}>🔧 Configuration Steps</h4>
  <p style={{ margin: '0', fontSize: '0.95em' }}>Add models to your Azure OpenAI Service and configure using the provided credentials.</p>
</div>

<div style={{ display: 'grid', gridTemplateColumns: '1fr 1fr', gap: '2em', alignItems: 'start', margin: '1em 0' }}>
  <div>
    <h4 style={{ margin: '0 0 1em 0', color: '#7c3aed' }}>📸 Add Model Interface</h4>
    <div style={{ textAlign: 'center' }}>
      <img 
        src={require('../static/img/dify/1.16.1/ex1/dify-add-embedding-model.png').default} 
        alt="Add Model" 
        style={{ maxWidth: '100%', borderRadius: '8px', cursor: 'pointer' }} 
        onClick={(e) => {
          const img = e.target;
          if (img.style.position === 'fixed') {
            img.style.position = 'static';
            img.style.top = 'auto';
            img.style.left = 'auto';
            img.style.transform = 'none';
            img.style.zIndex = 'auto';
            img.style.maxWidth = '100%';
            img.style.maxHeight = 'none';
            document.body.style.overflow = 'auto';
          } else {
            img.style.position = 'fixed';
            img.style.top = '50%';
            img.style.left = '50%';
            img.style.transform = 'translate(-50%, -50%)';
            img.style.zIndex = '9999';
            img.style.maxWidth = '90vw';
            img.style.maxHeight = '90vh';
            img.style.objectFit = 'contain';
            document.body.style.overflow = 'hidden';
          }
        }}
      />
      <div style={{ fontSize: '0.9em', color: '#666', marginTop: '0.5em' }}><i>Add models to your Azure OpenAI Service (click to expand)</i></div>
    </div>
  </div>
  
  <div>
    <h4 style={{ margin: '0 0 1em 0', color: '#7c3aed' }}>📋 Configuration Values</h4>
    <p style={{ fontSize: '0.9em', marginBottom: '1em', color: '#666' }}>Use the credentials provided earlier to configure the model:</p>

<table style={{ width: '100%', borderCollapse: 'collapse', marginBottom: '2em' }}>
  <thead>
    <tr style={{ background: '#f3f0ff' }}>
      <th style={{ padding: '0.5em', border: '1px solid #e5e7eb' }}>Field</th>
      <th style={{ padding: '0.5em', border: '1px solid #e5e7eb' }}>Value</th>
    </tr>
  </thead>
  <tbody>
    <tr><td style={{ border: '1px solid #e5e7eb' }}>Model Name</td><td style={{ border: '1px solid #e5e7eb' }}><code>text-embedding-3-large</code></td></tr>
    <tr><td style={{ border: '1px solid #e5e7eb' }}>API Version</td><td style={{ border: '1px solid #e5e7eb' }}><code>2024-12-01-preview</code></td></tr>
        <tr><td style={{ border: '1px solid #e5e7eb' }}>Endpoint</td><td style={{ border: '1px solid #e5e7eb' }}><i>(paste endpoint URL)</i></td></tr>
    <tr><td style={{ border: '1px solid #e5e7eb' }}>API Key</td><td style={{ border: '1px solid #e5e7eb' }}><i>(paste your key)</i></td></tr>
  </tbody>
</table>
  </div>
</div>

### 4. Configure System Model Settings

<div style={{ background: '#f0f9ff', border: '2px solid #0ea5e9', borderRadius: '8px', padding: '1em 1.5em', margin: '1em 0' }}>
  <h4 style={{ margin: '0 0 0.5em 0', color: '#0c4a6e' }}>🔧 Configuration Steps</h4>

  <li>
    Click on the <b>System Model Settings</b> button
  </li>
  <li>
    Select the <b>gpt-35-turbo-16k</b> model for reasoning and <b>text-embedding-3-large</b> for embedding
  </li>
  <li>
    Click <b>Save</b>
  </li>
  We won't use Rerank Model nor Speech to text features in this exercise.
</div>

<div style={{ textAlign: 'center' }}>
  <img src={require('../static/img/dify/1.16.1/ex1/dify-system-model-settings.png').default} alt="Dify 1.16.1 system model settings" style={{ maxWidth: '100%', borderRadius: '8px', cursor: 'pointer' }} />
</div>
<div style={{ fontSize: '0.9em', color: '#666', marginTop: '0.5em' }}><i>System model settings (click to expand)</i></div>

<div style={{ background: '#ecfdf5', border: '2px solid #22c55e', borderRadius: '12px', padding: '1.5em', margin: '2em 0' }}>
  <div style={{ textAlign: 'center', marginBottom: '1em' }}>
    <h3 style={{ margin: '0 0 0.5em 0', color: '#166534', fontSize: '1.3em' }}>🎉 Success! Your LLM is Connected</h3>
    <p style={{ margin: '0', fontSize: '1em', color: '#166534' }}>You should now see both models configured in your Dify instance</p>
  </div>
  <div style={{ textAlign: 'center' }}>
    <img src={require('../static/img/dify/1.16.1/ex1/dify-models-configured.png').default} alt="Configured chat and embedding models" style={{ maxWidth: '100%', borderRadius: '8px', cursor: 'pointer' }} onClick={(e) => {
      const img = e.target;
      if (img.style.position === 'fixed') {
        img.style.position = 'static';
        img.style.top = 'auto';
        img.style.left = 'auto';
        img.style.transform = 'none';
        img.style.zIndex = 'auto';
        img.style.maxWidth = '100%';
        img.style.maxHeight = 'none';
        document.body.style.overflow = 'auto';
      } else {
        img.style.position = 'fixed';
        img.style.top = '50%';
        img.style.left = '50%';
        img.style.transform = 'translate(-50%, -50%)';
        img.style.zIndex = '9999';
        img.style.maxWidth = '90vw';
        img.style.maxHeight = '90vh';
        img.style.objectFit = 'contain';
        document.body.style.overflow = 'hidden';
      }
    }} />
    <div style={{ fontSize: '0.9em', color: '#166534', marginTop: '0.5em' }}><i>Your configured models (click to expand)</i></div>
  </div>
</div>

---

---

## 🧪 Exercise 1B: Connect a Local Model

You have just run a workflow against Azure OpenAI. This exercise runs the *same* workflow against a model that is not a managed cloud API, so you can compare quality, latency and cost with everything else held constant.

Keep your Azure setup. It stays your known-good baseline, and every later exercise still works against it.

### 🎯 Objective

Configure Dify's official Ollama provider against a model your classroom runs, then run your Exercise 1 workflow on it and compare.

### 🏗️ Where the model actually runs

<div style={{ background: '#f0f9ff', border: '2px solid #0ea5e9', borderRadius: '8px', padding: '1.2em', marginBottom: '1.5em' }}>
  <p style={{ margin: '0 0 0.8em 0' }}>Your classroom runs <b>one shared Ollama service for the whole session</b>, on its own machine. It is not installed on your Dify instance, and it is not on your laptop.</p>
  <p style={{ margin: 0 }}>That machine downloads the model once for the entire room rather than once per person, which is why this works on conference Wi-Fi at all. You reach it over HTTPS with a token that belongs to your seat.</p>
</div>

```
   Your Dify instance ─┐
                       ├─► HTTPS + your token ─► auth proxy ─► Ollama ─► model
   Another learner's ──┘                                      (private port)
```

You get an endpoint, a model name and a token. You do not get shell access to that machine, and you do not need it.

### Two paths

| | Path A — Classroom model | Path B — Your own laptop |
|---|---|---|
| **Who runs it** | Your instructor | You |
| **Setup time** | ~2 minutes | ~20 minutes |
| **Needs a good network** | No | Yes, for the model download |
| **Use when** | You are in the workshop | You are self-studying later, or the classroom model is unavailable |

**Path A is the classroom path.** Use it unless your instructor says otherwise.

---

## 🅰️ Path A: The classroom shared model

### 1. Find your model credentials

Go back to the assignment page where you got your Dify URL and your Azure credentials. Below the Azure cards there is a **Classroom Local Model** card containing four things:

| Field | What it is | Example shape |
|---|---|---|
| **Base URL** | The authenticated HTTPS endpoint | `https://llm-<session>.<classroom domain>` |
| **Model Name** | The exact model tag to type into Dify | `llama3.2:3b` |
| **API Key** | Your personal seat token | a long hex string |
| **Valid Until** | When your token expires | a timestamp |

<div style={{ background: '#fffbe8', border: '2px solid #facc15', borderRadius: '8px', padding: '1em 1.2em', marginBottom: '1.5em' }}>
  <b>⚠️ Your token is yours.</b> It identifies your seat. Do not paste it into a shared document, a screenshot or a chat channel. If you think it leaked, tell your instructor and they will revoke it — your Dify provider will start failing immediately, which is the point.
</div>

{/* SCREENSHOT SLOT: assignment page Classroom Local Model card.
    Capture per docs/screenshots.manifest.json id "exercise-1b-classroom-local-model",
    then add the image block here. Not referenced yet so the build cannot break on a
    missing file. */}

If you do not see that card, your session is running without a shared model. Use Path B, or stay on Azure — nothing later in the workshop depends on this exercise.

### 2. Install the Ollama provider

1. Open **Integrations → Model Provider**.
2. Install the official **Ollama** provider from the provider cards.
3. Confirm it is installed before registering a model:

<div style={{ textAlign: 'center', margin: '1em 0' }}>
  <img src={require('../static/img/dify/1.16.1/ex1/local-model/ollama-provider-installed.png').default} alt="Installed Ollama provider in Dify" style={{ maxWidth: '100%', borderRadius: '8px' }} />
  <div style={{ fontSize: '0.9em', color: '#666', marginTop: '0.5em' }}><i>The official Ollama provider, installed</i></div>
</div>

### 3. Add the classroom model

Select **Add Model** and fill in the form from your credential card:

| Dify field | What to enter |
|---|---|
| **Model Type** | `LLM` |
| **Model Name** | the **Model Name** from your card, exactly — e.g. `llama3.2:3b` |
| **Base URL** | the **Base URL** from your card, with no trailing path |
| **Authorization Name** | `Bearer` |
| **API Key** | your seat token |
| **Model context size** | `8192` |
| **Upper bound for max tokens** | `1024` |

<div style={{ textAlign: 'center', margin: '1em 0' }}>
  <img src={require('../static/img/dify/1.16.1/ex1/local-model/add-ollama-model.png').default} alt="Adding an Ollama model in Dify" style={{ maxWidth: '100%', borderRadius: '8px' }} />
  <div style={{ fontSize: '0.9em', color: '#666', marginTop: '0.5em' }}><i>The Ollama model registration form. The screenshot shows a self-managed endpoint; yours will be the classroom URL from your card.</i></div>
</div>

Save. The model should appear under the Ollama provider:

<div style={{ textAlign: 'center', margin: '1em 0' }}>
  <img src={require('../static/img/dify/1.16.1/ex1/local-model/local-model-configured.png').default} alt="Configured local model under the Ollama provider" style={{ maxWidth: '100%', borderRadius: '8px' }} />
  <div style={{ fontSize: '0.9em', color: '#666', marginTop: '0.5em' }}><i>The registered model is now available as a chat model</i></div>
</div>

<details>
  <summary><b>Optional: check the endpoint yourself before configuring Dify</b></summary>

Two commands tell you whether the problem is your token or your Dify form. Replace the placeholders with your own values:

```bash
# Without a token: must return 401.
curl -s -o /dev/null -w '%{http_code}\n' https://YOUR-BASE-URL/api/tags

# With your token: must return 200 and list the model.
curl -s -H "Authorization: Bearer YOUR-TOKEN" https://YOUR-BASE-URL/api/tags
```

`401` on the second command means the token is wrong, expired or revoked. A connection error means the endpoint is wrong or the service is down — ask your instructor rather than retrying harder.
</details>

### 4. Run the same workflow

Open your Exercise 1 workflow, select the **LLM node**, and switch its model from Azure OpenAI to the Ollama model. Change nothing else — same prompt, same inputs.

<div style={{ textAlign: 'center', margin: '1em 0' }}>
  <img src={require('../static/img/dify/1.16.1/ex1/local-model/local-model-run-trace.png').default} alt="Successful local model workflow trace in Dify" style={{ maxWidth: '100%', borderRadius: '8px' }} />
  <div style={{ fontSize: '0.9em', color: '#666', marginTop: '0.5em' }}><i>The Exercise 1 workflow after switching the LLM node to the local model</i></div>
</div>

### 5. Compare against Azure

Switch the node back to Azure, run the same prompt again, and record both:

| | Classroom model | Azure OpenAI |
|---|---|---|
| Time to first token | | |
| Total response time | | |
| Did it follow the format you asked for? | | |
| Did it invent anything? | | |
| Who can see your prompt | your classroom only | Azure |
| Marginal cost per request | none — the host is already paid for | per token |

The comparison is only meaningful if the prompt and the retrieval context are identical. Change one thing at a time.

<div style={{ background: '#ecfdf5', border: '2px solid #22c55e', borderRadius: '8px', padding: '1em 1.2em', marginBottom: '1.5em' }}>
  <b>What you should expect.</b> A 3-billion-parameter model on a shared CPU is <i>noticeably slower</i> and <i>less reliable at following instructions</i> than a hosted frontier model. That is the lesson, not a fault: you are seeing what "local and private" actually costs in latency and quality, so you can decide when that trade is worth making.
</div>

---

## 🅱️ Path B: Your own self-hosted model (optional)

Use this when you are studying on your own, or when the classroom model is unavailable and you would rather not use Azure.

<ul>
  <li><b>Ollama on the same host or network as Dify</b>: install Ollama, run <code>ollama pull qwen2.5:1.5b</code>, and use the Ollama provider's native endpoint.</li>
  <li><b>Ollama on your laptop with remote Dify</b>: do not enter <code>localhost</code>. Dify resolves that name inside its own container, not on your machine. Use an authenticated HTTPS gateway or a private network route Dify can reach.</li>
  <li><b>LM Studio</b>: start its local server mode and use its documented OpenAI-compatible endpoint, only when Dify can reach it.</li>
  <li><b>Self-hosted vLLM/TGI</b>: expose a private, authenticated endpoint reachable from the Dify runtime network.</li>
</ul>

**Never expose Ollama's unauthenticated port to the internet.** It has no authentication of its own, and its API can pull and delete models. Put TLS and authentication in front of it, and use the smallest model and context window that meet the goal.

The reference setup used for these screenshots was:

1. `ollama serve`
2. `ollama pull qwen2.5:1.5b`
3. A loopback-only proxy on `127.0.0.1:8787` forwarding to Ollama, rejecting requests without a bearer token
4. `cloudflared tunnel --url http://127.0.0.1:8787`
5. Two checks: unauthenticated `GET /api/tags` returns `401`, authenticated returns `200`

<div style={{ textAlign: 'center', margin: '1em 0' }}>
  <img src={require('../static/img/dify/1.16.1/ex1/local-model/local-ollama-tunnel-setup.png').default} alt="Local Ollama exposed through an authenticated temporary HTTPS tunnel" style={{ maxWidth: '100%', borderRadius: '8px' }} />
  <div style={{ fontSize: '0.9em', color: '#666', marginTop: '0.5em' }}><i>Local Ollama plus an authenticated temporary HTTPS tunnel</i></div>
</div>

Then register it in Dify exactly as in Path A step 3, using your own base URL, your own token and your own model tag.

### Parameter starting points

<table style={{ width: '100%', borderCollapse: 'collapse', marginBottom: '1em' }}>
  <thead>
    <tr style={{ background: '#f3f4f6' }}>
      <th style={{ border: '1px solid #e5e7eb', padding: '0.6em', textAlign: 'left' }}>Parameter</th>
      <th style={{ border: '1px solid #e5e7eb', padding: '0.6em', textAlign: 'left' }}>Starting value</th>
      <th style={{ border: '1px solid #e5e7eb', padding: '0.6em', textAlign: 'left' }}>Adjustment signal</th>
    </tr>
  </thead>
  <tbody>
    <tr><td style={{ border: '1px solid #e5e7eb', padding: '0.6em' }}>Temperature</td><td style={{ border: '1px solid #e5e7eb', padding: '0.6em' }}><code>0.3</code></td><td style={{ border: '1px solid #e5e7eb', padding: '0.6em' }}>Increase only if answers are too rigid.</td></tr>
    <tr><td style={{ border: '1px solid #e5e7eb', padding: '0.6em' }}>Top P</td><td style={{ border: '1px solid #e5e7eb', padding: '0.6em' }}><code>0.9</code></td><td style={{ border: '1px solid #e5e7eb', padding: '0.6em' }}>Lower if output becomes noisy.</td></tr>
    <tr><td style={{ border: '1px solid #e5e7eb', padding: '0.6em' }}>Max tokens</td><td style={{ border: '1px solid #e5e7eb', padding: '0.6em' }}><code>512-800</code></td><td style={{ border: '1px solid #e5e7eb', padding: '0.6em' }}>Lower to control latency on a shared host.</td></tr>
    <tr><td style={{ border: '1px solid #e5e7eb', padding: '0.6em' }}>Timeout</td><td style={{ border: '1px solid #e5e7eb', padding: '0.6em' }}><code>60-120s</code></td><td style={{ border: '1px solid #e5e7eb', padding: '0.6em' }}>CPU inference is slow; a short timeout looks like a broken model.</td></tr>
  </tbody>
</table>

For comparing model quality, latency and hardware efficiency, [Artificial Analysis](https://artificialanalysis.ai/) is a useful discovery aid — not a decision source. Confirm the model card, license, context limit and your own representative prompts before choosing.

---

## 🚦 When the classroom model is busy or down

The shared host serves the whole room, so you will occasionally meet its limits. These are expected and each has a specific meaning.

| What you see | What it means | What to do |
|---|---|---|
| `429` / "at capacity" | Too many people generating at once. Requests queue; past the queue limit they are refused. | Wait a few seconds and retry. Do not retry in a tight loop — it makes the queue worse for everyone. |
| `401` | Your token is wrong, expired, or was revoked. | Re-copy it from the assignment page. If it still fails, ask your instructor. |
| Very slow first response | The model was evicted from memory and is reloading, or the host is saturated. | Wait. The first request after an idle period legitimately takes much longer. |
| `502` / `503` / connection refused | The service is down or restarting. | **Switch your LLM node back to Azure and carry on.** |

<div style={{ background: '#fef2f2', border: '2px solid #ef4444', borderRadius: '8px', padding: '1em 1.2em', marginBottom: '1.5em' }}>
  <b>The classroom model is never a blocker.</b> Every exercise in this workshop works against Azure. If the local model misbehaves, switch the LLM node back and keep going — you can return to Exercise 1B later.
</div>

## 🧹 Cleanup and restoration

**During the workshop** you do not need to clean anything up. Your token expires on its own and your instructor tears down the shared host when the session ends.

**If you want your Dify back to the Azure-only state:**

1. Open the **LLM node** in your workflow and switch the model back to your Azure deployment.
2. Check **Settings → Model Provider → System Model Settings** still points at Azure for the system reasoning model.
3. Optionally remove the Ollama model entry under the Ollama provider. Leaving it is harmless — it simply stops working once your token expires.

**After the workshop** the endpoint stops resolving and your token is revoked. A saved Ollama provider entry pointing at it will fail; delete it, or repoint it at your own endpoint using Path B.

**If you used Path B**, stop your tunnel and your local Ollama (`ollama stop`, or quit the app). A tunnel left running is an authenticated route into your laptop.

### ✅ Completion Check

This exercise is complete when:

1. You ran at least one prompt through your chatbot using the local model.
2. You switched back to Azure and ran the same prompt.
3. You can state one concrete difference in latency and one in answer quality.
4. You know what you would do if the local model stopped responding mid-demo.

### 🧯 Troubleshooting

<ul>
  <li><b>401 Unauthorized</b>: re-copy the token from your assignment page — a trailing space is the usual cause. If it still fails, the token was revoked; ask your instructor.</li>
  <li><b>429 / "at capacity"</b>: the shared host is saturated. Wait and retry once; do not loop.</li>
  <li><b>Connection failed</b>: confirm the base URL matches your card exactly, including <code>https://</code> and with no trailing path. On Path B, <code>localhost</code> means the Dify runtime, not your laptop.</li>
  <li><b>Model not listed</b>: the model name must match the tag exactly, including the part after the colon.</li>
  <li><b>Slow answers</b>: expected on a shared CPU host. Reduce max tokens and keep retrieval chunk count small while tuning.</li>
  <li><b>Poor relevance</b>: keep your embedding model quality high even when generation uses a smaller local model. Retrieval quality and generation quality are separate problems.</li>
  <li><b>Timeouts in Dify</b>: raise the node timeout to 60-120s. CPU inference is genuinely slow, and a short timeout is indistinguishable from a broken model.</li>
</ul>

---

## 🤖 Step 5: Create Your First Chatbot

### 1. Create From Blank

<ol>
  <li>
    Go to <b>Studio → Chatbot → Create from Blank</b>:
    <img src={require('../static/img/dify/1.16.1/ex1/dify-chatbot-from-blank.png').default} alt="Create a workflow from blank" style={{ maxWidth: '100%', borderRadius: '8px', margin: '1em 0' }} />
    <div style={{ fontSize: '0.95em', color: '#666', marginBottom: '1em' }}><i>Screenshot: Creating a new chatbot from scratch</i></div>
  </li>
  <li>
    Select <b>Workflow</b>
  </li>
  <li>
    Give your bot a name and description
    <img src={require('../static/img/dify/1.16.1/ex1/dify-chatbot-config.png').default} alt="Configure the workflow application" style={{ maxWidth: '100%', borderRadius: '8px', margin: '1em 0' }} />
    <div style={{ fontSize: '0.95em', color: '#666', marginBottom: '1em' }}><i>Screenshot: Configuring your chatbot</i></div>
  </li>
</ol>

### 2. Setup Query Input

<div style={{ background: '#f0f9ff', border: '2px solid #0ea5e9', borderRadius: '8px', padding: '1em 1.5em', margin: '1em 0' }}>
  <h4 style={{ margin: '0 0 0.5em 0', color: '#0c4a6e' }}>🔧 Input Configuration Steps</h4>
  <p style={{ margin: '0', fontSize: '0.95em' }}>Configure the input field that will receive user questions for your chatbot.</p>
</div>

<ol>
  <li>
    <b>Click on the start block</b> and then click the <b>+</b> button to add an <i>Input Field</i>
    <div style={{ textAlign: 'center', margin: '1em 0' }}>
      <img 
        src={require('../static/img/dify/1.16.1/ex1/dify-workflow-start.png').default} 
        alt="Start Block" 
        style={{ maxWidth: '100%', borderRadius: '8px', cursor: 'pointer' }} 
        onClick={(e) => {
          const img = e.target;
          if (img.style.position === 'fixed') {
            img.style.position = 'static';
            img.style.top = 'auto';
            img.style.left = 'auto';
            img.style.transform = 'none';
            img.style.zIndex = 'auto';
            img.style.maxWidth = '100%';
            img.style.maxHeight = 'none';
            document.body.style.overflow = 'auto';
          } else {
            img.style.position = 'fixed';
            img.style.top = '50%';
            img.style.left = '50%';
            img.style.transform = 'translate(-50%, -50%)';
            img.style.zIndex = '9999';
            img.style.maxWidth = '90vw';
            img.style.maxHeight = '90vh';
            img.style.objectFit = 'contain';
            document.body.style.overflow = 'hidden';
          }
        }}
      />
      <div style={{ fontSize: '0.9em', color: '#666', marginTop: '0.5em' }}><i>Step 1: Click on the start block to add input field (click to expand)</i></div>
    </div>
  </li>
  <li>
    <b>Configure the input field:</b>
    <ul>
      <li>Name it <code>query</code></li>
      <li>Set max length to <code>200</code></li>
      <li>Click <b>Save</b></li>
    </ul>
    <div style={{ textAlign: 'center', margin: '1em 0' }}>
      <img src={require('../static/img/ex1/dify-chatboot-add-input.png').default} alt="Add Input" style={{ maxWidth: '100%', borderRadius: '8px', cursor: 'pointer' }} onClick={(e) => {
        const img = e.target;
        if (img.style.position === 'fixed') {
          img.style.position = 'static';
          img.style.top = 'auto';
          img.style.left = 'auto';
          img.style.transform = 'none';
          img.style.zIndex = 'auto';
          img.style.maxWidth = '100%';
          img.style.maxHeight = 'none';
          document.body.style.overflow = 'auto';
        } else {
          img.style.position = 'fixed';
          img.style.top = '50%';
          img.style.left = '50%';
          img.style.transform = 'translate(-50%, -50%)';
          img.style.zIndex = '9999';
          img.style.maxWidth = '90vw';
          img.style.maxHeight = '90vh';
          img.style.objectFit = 'contain';
          document.body.style.overflow = 'hidden';
        }
      }} />
      <div style={{ fontSize: '0.9em', color: '#666', marginTop: '0.5em' }}><i>Step 2: Configure input field settings (click to expand)</i></div>
    </div>
    <div style={{ textAlign: 'center', margin: '1em 0' }}>
      <img src={require('../static/img/ex1/dify-chatboot-start-config.png').default} alt="Start Config" style={{ maxWidth: '100%', borderRadius: '8px', cursor: 'pointer' }} onClick={(e) => {
        const img = e.target;
        if (img.style.position === 'fixed') {
          img.style.position = 'static';
          img.style.top = 'auto';
          img.style.left = 'auto';
          img.style.transform = 'none';
          img.style.zIndex = 'auto';
          img.style.maxWidth = '100%';
          img.style.maxHeight = 'none';
          document.body.style.overflow = 'auto';
        } else {
          img.style.position = 'fixed';
          img.style.top = '50%';
          img.style.left = '50%';
          img.style.transform = 'translate(-50%, -50%)';
          img.style.zIndex = '9999';
          img.style.maxWidth = '90vw';
          img.style.maxHeight = '90vh';
          img.style.objectFit = 'contain';
          document.body.style.overflow = 'hidden';
        }
      }} />
      <div style={{ fontSize: '0.9em', color: '#666', marginTop: '0.5em' }}><i>Step 3: Final start block configuration (click to expand)</i></div>
    </div>
  </li>
</ol>

### 3. Add LLM Block

<div style={{ background: '#f0f9ff', border: '2px solid #0ea5e9', borderRadius: '8px', padding: '1em 1.5em', margin: '1em 0' }}>
  <h4 style={{ margin: '0 0 0.5em 0', color: '#0c4a6e' }}>🧠 LLM Configuration Steps</h4>
  <p style={{ margin: '0', fontSize: '0.95em' }}>Add and configure the LLM block that will process user queries and generate responses.</p>
</div>

<ol>
  <li>
    <b>Add the LLM block:</b> Click <b>+</b> and select the <b>LLM</b> block from the available options
    <div style={{ textAlign: 'center', margin: '1em 0' }}>
      <img src={require('../static/img/ex1/dify-chatboot-blocks.png').default} alt="Blocks" style={{ maxWidth: '100%', borderRadius: '8px', cursor: 'pointer' }} onClick={(e) => {
        const img = e.target;
        if (img.style.position === 'fixed') {
          img.style.position = 'static';
          img.style.top = 'auto';
          img.style.left = 'auto';
          img.style.transform = 'none';
          img.style.zIndex = 'auto';
          img.style.maxWidth = '100%';
          img.style.maxHeight = 'none';
          document.body.style.overflow = 'auto';
        } else {
          img.style.position = 'fixed';
          img.style.top = '50%';
          img.style.left = '50%';
          img.style.transform = 'translate(-50%, -50%)';
          img.style.zIndex = '9999';
          img.style.maxWidth = '90vw';
          img.style.maxHeight = '90vh';
          img.style.objectFit = 'contain';
          document.body.style.overflow = 'hidden';
        }
      }} />
      <div style={{ fontSize: '0.9em', color: '#666', marginTop: '0.5em' }}><i>Step 1: Select LLM block from available options (click to expand)</i></div>
    </div>
  </li>
  <li>
    <b>Configure the LLM:</b>
    <ul>
      <li>In Context field add the query variable </li>
      <li>In Prompt field add the system prompt, that should include the query variable and the context variable</li>
    </ul>
  </li>
  <li>
    <b>Add a System Prompt:</b> This helps the AI understand how to respond
    <div style={{ background: '#f3f0ff', border: '2px solid #7c3aed', borderRadius: '8px', padding: '1em', margin: '1em 0' }}>
      <h5 style={{ margin: '0 0 0.5em 0', color: '#7c3aed' }}>💡 Example System Prompt:</h5>
      <p style={{ margin: '0', fontStyle: 'italic', fontSize: '0.95em' }}>"Answer in a clean, professional tone. Be concise but precise."</p>
    </div>
  </li>
  <li>
    <b>Bind variables:</b> Connect the prompt to <code>query</code> using the <b>{'{'}x{'}'}</b> selector
    <div style={{ textAlign: 'center', margin: '1em 0' }}>
      <img src={require('../static/img/ex1/dify-chatboot-LLM-config.png').default} alt="LLM Config" style={{ maxWidth: '100%', borderRadius: '8px', cursor: 'pointer' }} onClick={(e) => {
        const img = e.target;
        if (img.style.position === 'fixed') {
          img.style.position = 'static';
          img.style.top = 'auto';
          img.style.left = 'auto';
          img.style.transform = 'none';
          img.style.zIndex = 'auto';
          img.style.maxWidth = '100%';
          img.style.maxHeight = 'none';
          document.body.style.overflow = 'auto';
        } else {
          img.style.position = 'fixed';
          img.style.top = '50%';
          img.style.left = '50%';
          img.style.transform = 'translate(-50%, -50%)';
          img.style.zIndex = '9999';
          img.style.maxWidth = '90vw';
          img.style.maxHeight = '90vh';
          img.style.objectFit = 'contain';
          document.body.style.overflow = 'hidden';
        }
      }} />
      <div style={{ fontSize: '0.9em', color: '#666', marginTop: '0.5em' }}><i>Step 2: Configure LLM settings and bind variables (click to expand)</i></div>
    </div>
  </li>
</ol>

### 4. Add End Block

<div style={{ background: '#f0f9ff', border: '2px solid #0ea5e9', borderRadius: '8px', padding: '1em 1.5em', margin: '1em 0' }}>
  <h4 style={{ margin: '0 0 0.5em 0', color: '#0c4a6e' }}>🏁 Final Configuration</h4>
  <p style={{ margin: '0', fontSize: '0.95em' }}>Complete your workflow by adding an end block to output the LLM response.</p>
</div>

<ol>
  <li>
    <b>Add an End block:</b> Click <b>+</b> and select the <b>End</b> block
  </li>
  <li>
    <b>Configure the output:</b> Create an output variable (e.g., <code>text</code>) linked to the LLM response
    <div style={{ textAlign: 'center', margin: '1em 0' }}>
      <img src={require('../static/img/ex1/dify-chatboot-end-config.png').default} alt="End Config" style={{ maxWidth: '100%', borderRadius: '8px', cursor: 'pointer' }} onClick={(e) => {
        const img = e.target;
        if (img.style.position === 'fixed') {
          img.style.position = 'static';
          img.style.top = 'auto';
          img.style.left = 'auto';
          img.style.transform = 'none';
          img.style.zIndex = 'auto';
          img.style.maxWidth = '100%';
          img.style.maxHeight = 'none';
          document.body.style.overflow = 'auto';
        } else {
          img.style.position = 'fixed';
          img.style.top = '50%';
          img.style.left = '50%';
          img.style.transform = 'translate(-50%, -50%)';
          img.style.zIndex = '9999';
          img.style.maxWidth = '90vw';
          img.style.maxHeight = '90vh';
          img.style.objectFit = 'contain';
          document.body.style.overflow = 'hidden';
        }
      }} />
      <div style={{ fontSize: '0.9em', color: '#666', marginTop: '0.5em' }}><i>Configure the end block to output LLM response (click to expand)</i></div>
    </div>
  </li>
</ol>

---

## 🧪 Run and Debug

<div style={{ background: '#f0f9ff', border: '2px solid #0ea5e9', borderRadius: '8px', padding: '1em 1.5em', margin: '1em 0' }}>
  <h4 style={{ margin: '0 0 0.5em 0', color: '#0c4a6e' }}>🧪 Testing Your Chatbot</h4>
  <p style={{ margin: '0', fontSize: '0.95em' }}>Test your chatbot to ensure everything is working correctly and see how it processes queries.</p>
</div>

### 🚀 Step 1: Run Your Chatbot

<ol>
  <li>
    <b>Click the "Run" button</b> in the top-right corner of your workflow
  </li>
  <li>
    <b>Input a test question</b> and click <b>"Start Run"</b>
  </li>
</ol>

<div style={{ background: '#fffbe8', border: '2px solid #facc15', borderRadius: '8px', padding: '1em', margin: '1em 0' }}>
  <h5 style={{ margin: '0 0 0.5em 0', color: '#ca8a04' }}>💡 Try This Test Question:</h5>
  <p style={{ margin: '0', fontStyle: 'italic', fontSize: '1em' }}>"What is the difference between unit and integration testing?"</p>
</div>

### 🎉 Expected Results

You should get a response from your magical assistant! The LLM will process your question and provide an answer.

<div style={{ textAlign: 'center', margin: '1em 0' }}>
  <img src={require('../static/img/dify/1.16.1/ex1/dify-chatbot-run-result.png').default} alt="Successful workflow answer comparing unit and integration testing" style={{ maxWidth: '100%', borderRadius: '8px', cursor: 'pointer' }} onClick={(e) => {
    const img = e.target;
    if (img.style.position === 'fixed') {
      img.style.position = 'static';
      img.style.top = 'auto';
      img.style.left = 'auto';
      img.style.transform = 'none';
      img.style.zIndex = 'auto';
      img.style.maxWidth = '100%';
      img.style.maxHeight = 'none';
      document.body.style.overflow = 'auto';
    } else {
      img.style.position = 'fixed';
      img.style.top = '50%';
      img.style.left = '50%';
      img.style.transform = 'translate(-50%, -50%)';
      img.style.zIndex = '9999';
      img.style.maxWidth = '90vw';
      img.style.maxHeight = '90vh';
      img.style.objectFit = 'contain';
      document.body.style.overflow = 'hidden';
    }
  }} />
  <div style={{ fontSize: '0.9em', color: '#666', marginTop: '0.5em' }}><i>Testing your chatbot with a sample question (click to expand)</i></div>
</div>

### 🔍 Step 2: Debug and Trace

Check the <b>Tracing</b> tab for a detailed breakdown of what your chatbot did:

<div style={{ textAlign: 'center', margin: '1em 0' }}>
  <img src={require('../static/img/dify/1.16.1/ex1/dify-chatbot-run-trace-detail.png').default} alt="Successful run detail with elapsed time and token count" style={{ maxWidth: '100%', borderRadius: '8px', cursor: 'pointer' }} onClick={(e) => {
    const img = e.target;
    if (img.style.position === 'fixed') {
      img.style.position = 'static';
      img.style.top = 'auto';
      img.style.left = 'auto';
      img.style.transform = 'none';
      img.style.zIndex = 'auto';
      img.style.maxWidth = '100%';
      img.style.maxHeight = 'none';
      document.body.style.overflow = 'auto';
    } else {
      img.style.position = 'fixed';
      img.style.top = '50%';
      img.style.left = '50%';
      img.style.transform = 'translate(-50%, -50%)';
      img.style.zIndex = '9999';
      img.style.maxWidth = '90vw';
      img.style.maxHeight = '90vh';
      img.style.objectFit = 'contain';
      document.body.style.overflow = 'hidden';
    }
  }} />
  <div style={{ fontSize: '0.9em', color: '#666', marginTop: '0.5em' }}><i>Trace the chatbot's response generation process (click to expand)</i></div>
</div>

<div style={{ background: '#e0f2fe', border: '2px solid #38bdf8', borderRadius: '8px', padding: '1em 1.2em', margin: '1em 0' }}>
  <p style={{ margin: '0', fontSize: '1em' }}>
    🧠 <b>Pro Tip:</b> The tracing tab shows you exactly how your chatbot processed the input, including token usage and response generation steps.
  </p>
</div>

---

## 🎯 Exercise Complete! What's Next?

<div style={{ background: '#f3f0ff', border: '2px solid #7c3aed', borderRadius: '12px', padding: '2em', marginBottom: '2em' }}>
  <div style={{ textAlign: 'center', marginBottom: '1.5em' }}>
    <h3 style={{ margin: '0 0 0.5em 0', color: '#7c3aed', fontSize: '1.4em' }}>🎉 Congratulations!</h3>
    <p style={{ margin: '0', fontSize: '1.1em', color: '#7c3aed' }}>You've successfully connected your LLM and created your first AI chatbot!</p>
  </div>
  
  <div style={{ background: '#e0f2fe', border: '2px solid #38bdf8', borderRadius: '8px', padding: '1em', marginBottom: '1.5em' }}>
    <h4 style={{ margin: '0 0 0.5em 0', color: '#0c4a6e' }}>✅ What You've Accomplished:</h4>
    <ul style={{ margin: '0', fontSize: '0.95em' }}>
      <li>✅ Connected to Azure-hosted GPT models</li>
      <li>✅ Configured both LLM and embedding models</li>
      <li>✅ Created your first AI chatbot</li>
      <li>✅ Tested the complete workflow</li>
    </ul>
  </div>

  <div style={{ background: '#fffbe8', border: '2px solid #facc15', borderRadius: '8px', padding: '1em', marginBottom: '1.5em' }}>
    <h4 style={{ margin: '0 0 0.5em 0', color: '#ca8a04' }}>🚀 Ready for the Next Challenge?</h4>
    <p style={{ margin: '0 0 1em 0', fontSize: '0.95em' }}>In Exercise 2, you'll learn about:</p>
    <ul style={{ margin: '0', fontSize: '0.95em' }}>
      <li>📚 Document chunking strategies for better RAG</li>
      <li>🔧 Uploading Jira issues and technical documentation</li>
      <li>⚖️ Comparing different knowledge base approaches</li>
      <li>🧠 Preparing your chatbot for advanced RAG capabilities</li>
  </ul>
  </div>

  <div style={{ display: 'grid', gridTemplateColumns: '1fr 1fr', gap: '1em', marginBottom: '1.5em' }}>
    <div style={{ textAlign: 'center' }}>
      <a href="./exercise-2-knowledge-ingestion" style={{
        display: 'inline-block',
        background: '#7c3aed',
        color: '#fff',
        padding: '1em 1.5em',
        borderRadius: '8px',
        textDecoration: 'none',
        fontWeight: 'bold',
        fontSize: '1em',
        boxShadow: '0 4px 8px rgba(124, 58, 237, 0.3)',
        width: '100%'
      }}>📚 Continue to Exercise 2</a>
    </div>
    <div style={{ textAlign: 'center' }}>
      <a href="/dify-dsls/ex1_solved-1.16.1.yml" download style={{
        display: 'inline-block',
        background: '#22c55e',
        color: '#fff',
        padding: '1em 1.5em',
        borderRadius: '8px',
        textDecoration: 'none',
        fontWeight: 'bold',
        fontSize: '1em',
        boxShadow: '0 4px 8px rgba(34, 197, 94, 0.3)',
        width: '100%'
      }}>⬇️ Download Solution</a>
    </div>
  </div>
</div>
